@@ -22,7 +22,6 @@ import:
 - package: github.com/go-ini/ini
   version: ^1.21.0
 - package: github.com/projectcalico/libcalico-go
-  version: v1.0.0-beta-rc2
   subpackages:
   - lib
 - package: github.com/Sirupsen/logrus
