@@ -1,3 +1,9 @@
+felix (2.0.0~dev__SNAPSHOT__-__STREAM__) __STREAM__; urgency=low
+
+  * Development release.
+
+ -- Neil Jerram <neil@tigera.io>  Mon, 07 Nov 2016 15:29:35 +0000
+
 felix (2.0.0~beta.3-__STREAM__) __STREAM__; urgency=low
 
   * felix release (from Git commit 2b49e4b).
